[gd_scene load_steps=8 format=3 uid="uid://bdiefa0x3boe2"]

[ext_resource type="StyleBox" uid="uid://dpwjrgc2bves7" path="res://Scenes/GuiScenes/Inventory/button.tres" id="1_myluo"]
[ext_resource type="Script" path="res://Scenes/GuiScenes/Inventory/InventorySlot.gd" id="2_7am73"]
[ext_resource type="Texture2D" uid="uid://ccotmonek0eb" path="res://Assets/Gui/itemsNEW.png" id="2_ylbl5"]
[ext_resource type="Texture2D" uid="uid://bh1y4w5i5tevu" path="res://Assets/Gui/select.png" id="3_wknqt"]
[ext_resource type="Texture2D" uid="uid://uo3s2n73gi7m" path="res://Assets/Gui/check.png" id="4_ept0h"]
[ext_resource type="FontFile" uid="uid://daaceucur7wcw" path="res://Assets/Fonts/Pixeled.ttf" id="5_8r0we"]
[ext_resource type="AudioStream" uid="uid://cwgl82ti73t2b" path="res://Assets/Audio/inv_select.ogg" id="7_oejqs"]

[node name="InventorySlot" type="Button" groups=["Ignore"]]
theme_override_styles/focus = ExtResource("1_myluo")
theme_override_styles/disabled = ExtResource("1_myluo")
theme_override_styles/hover = ExtResource("1_myluo")
theme_override_styles/pressed = ExtResource("1_myluo")
theme_override_styles/normal = ExtResource("1_myluo")
script = ExtResource("2_7am73")

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_oejqs")
volume_db = -10.0
bus = &"Game"

[node name="ItemPicture" type="Sprite2D" parent="."]
position = Vector2(15, 15)
texture = ExtResource("2_ylbl5")
hframes = 32
vframes = 11

[node name="SelectSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(15, 15)
texture = ExtResource("3_wknqt")

[node name="CheckmarkSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(15, 15)
texture = ExtResource("4_ept0h")

[node name="AmountLabelBackground" type="Label" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = -2.0
offset_right = 29.0
offset_bottom = 15.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_8r0we")
theme_override_font_sizes/font_size = 5
horizontal_alignment = 2

[node name="AmountLabel" type="Label" parent="."]
layout_mode = 0
offset_top = -3.0
offset_right = 28.0
offset_bottom = 14.0
theme_override_fonts/font = ExtResource("5_8r0we")
theme_override_font_sizes/font_size = 5
horizontal_alignment = 2

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
